    - Use here doc to set up /etc/apt/sources.list.
    - List sources.list.
  * chroot/README: Rename from README.buildd-chroot.  Remove
    buildd.chroot section.
  * bin/sbuild-createchroot:
    - Moved from chroot/buildd.chroot.
    - Also install fakeroot and build-essential.
  * sbuild-createchroot.1.in: Add manual page.
  * debian/manpages: Add sbuild-createchroot.1.
  * debian/rules: Install sbuild-createchroot, and add buildd.chroot
    compatibility symlink.
  * example.sbuildrc: Add missing variable types.  [Jan-Marek Glogowski]
  * example.sbuildrc: Add missing variable types and add
    $check_depends_algorithm.  [Jan-Marek Glogowski]
  * sbuild.1: Document --check-depends-algorithm [Jan-Marek Glogowski]
  * Move manual pages to man/.
  * debian/manpages: Move manual pages to man/.

 -- Roger Leigh <rleigh@debian.org>  Sun, 02 Dec 2007 15:03:04 +0000

sbuild (0.56) unstable; urgency=low

  * sbuild
    - Fix --force-orig-source option which was renamed to
      --force_orig_source while rewriting the options parsing logic to use
      Getopt::Long (Closes: #428205).  Thanks to Alec Berryman for
      reporting this regression.
    - Accept arguments for options requiring a string (Closes: #431216).
      Thanks to Anders Kaseorg for the patch for this regression.
  * debian/preinst: Use dpkg-query in place of /var/lib/dpkg/status.

 -- Roger Leigh <rleigh@debian.org>  Sat, 07 Jul 2007 20:36:35 +0100

sbuild (0.55) unstable; urgency=low

  * sbuild:
    - Parse options with Getopt::Long.
    - Remove trailing whitespace.
    - Initialise $main::sub_task with a value, in case the build gets
      terminated prior to it being used.
    - Change the position of begin_session, so that it matches the cleanup
      order on shutdown.
    - build:
      + Document the regex which strips the epoch from the version
        number.
      + Remove the call to setsid when forking dpkg-buildpackage, because